--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,3 @@
-.weather-app {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 0.5px solid #1b263f;
-  border-radius: 5px;
-  color: #3f51fb;
-}
-.ukraine {
-  width: 200px;
-  position: fixed;
-  top: 55px;
-  right: 285px;
-}
-
 h1 {
   color: #f2f03c;
 }
@@ -33,4 +18,39 @@ small {
 }
 .source {
   color: #3f51fb;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+.weather-app {
+  padding: 20px;
+  border: 0.5px solid #1b263f;
+  border-radius: 5px;
+  color: #3f51fb;
+}
+.ukraine {
+  width: 200px;
+  display: block;
+  position: fixed;
+  top: 55px;
+  right: 255px;
+}
+.overview {
+  margin-bottom: 20px;
+}
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
+.weather-temperature strong {
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+}
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
 }
