--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
+  text-transform: capitalize;
   font-size: 16px;
   font-weight: 100px;
 }
