--- a/src/style.css
+++ b/src/style.css
@@ -10,9 +10,12 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-transform: capitalize;
+
   font-size: 16px;
   font-weight: 100px;
+}
+li:first-letter {
+  text-transform: capitalize;
 }
 small {
   color: #1b263f;
