Corrected place of the picture

--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,8 @@ small {
   width: 200px;
   display: block;
   position: fixed;
+  margin-left: -70px;
+  margin-top: 20px;
 }
 .overview {
   margin-bottom: 20px;
