Implemented the unit conversion

--- a/src/style.css
+++ b/src/style.css
@@ -58,3 +58,11 @@ small {
   font-size: 16px;
   top: -34px;
 }
+.weather-temperature .active {
+  color: #3f51fb;
+  cursor: default;
+}
+
+.weather-temperature .active:hover {
+  text-decoration: none;
+}
