--- a/src/style.css
+++ b/src/style.css
@@ -66,3 +66,20 @@ small {
 .weather-temperature .active:hover {
   text-decoration: none;
 }
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.8;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.7;
+}
+.weather-forecast-temperature {
+  font-size: 13px;
+}
